--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^16.3.0",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
     "stylelint-config-prettier": "^9.0.5",
